# lidar_track

./: .gitignore  CMakeLists.txt  package.xml
include/Hungarian/: Hungarian.cpp  Hungarian.h
launch/: lidar_track.launch
output/: .~lock.6f153f9c-edc5-389f-ac6f-40705c30d97e_log.ods#  6f153f9c-edc5-389f-ac6f-40705c30d97e_log.ods  euc+hun_bias=2.csv  trackOutput_2.csv  trackOutput_3.csv  trackOutput_clustering_0.5hz_min40_global.csv  trackOutput_clustering_0.5hz_min40_global_revised_thres.csv  trackOutput_clustering_0.5hz_min40_global_whole_hun.csv  trackOutput_clustering_0.5hz_min40_local.csv  trackOutput_clustering_1hz.csv  trackOutput_clustering_1hz_min_size40.csv  trackOutput_delay_0.09.csv  trackOutput_delay_0.09_1hz.csv  trackOutput_delay_0.09_queue1000.csv  trackOutput_delay_test.csv  trackOutput_gt_based.csv  trackOutput_mahalanobis+hun.csv  trackOutput_mahalanobis+hun_bias=2.csv  trackOutput_min40_global_near+hun.csv
output/gt/global/: gt_original_modified.csv
output/gt/local/: gt_2.csv  gt_modified.csv
src/: Hungarian.cpp  annota_sample_map.cpp  argo_tracking_test_viz.cpp  gt_output.cpp  hungarian_test.cpp  image_read.cpp  img_diff.cpp  kf_track_update.cpp  modified_kf.cpp  modified_kf_track.cpp  modified_kf_track_gt.cpp  region_growing_seg.cpp  see.cpp  subscribe_compressed_img.cpp  test_detection.cpp  write_csv_test.cpp
